# gamgui

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  gamgui.spec  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.claude/agents/: gam-command-author.md  gam-command-reviewer.md
.claude/skills/add-builder-command/: SKILL.md
.github/workflows/: ci.yml  gam-watch.yml
docs/: builder-commands.md
docs/screenshots/: README.md
gamgui/: __init__.py  app.py
gamgui/core/: audit.py  biometrics.py  calendar_index.py  guard.py  lifecycle.py  onboarding.py  paths.py  reports.py  setup.py  signatures.py  usercache.py
gamgui/core/catalog/: __init__.py  catalog.py  describe.py  models.py  nouns.py  parser.py  query_hints.py  readbuilder.py
gamgui/core/connectors/: abapit_connector.py  base.py  gam_connector.py  person.py
gamgui/core/gam/: commands.py  errors.py  models.py  parser.py  runner.py
gamgui/core/secrets/: ephemeral.py  vault.py
gamgui/resources/gam7/: VERSION  command_catalog.json
gamgui/web/: jobs.py  server.py
gamgui/web/routes/: audit.py  builder.py  calendars.py  groups.py  lifecycle.py  onboarding.py  reports.py  setup.py  signatures.py  users.py
gamgui/web/static/: .gitkeep
gamgui/web/templates/: _action_result.html  _audit_rows.html  _board_members.html  _builder_form.html  _builder_preview.html  _bulk_apply.html  _bulk_preview.html  _calendar.html  _calendar_delete.html  _calendar_detail.html  _calendar_index_job.html  _calendar_index_status.html  _calendar_list.html  _catalog_list.html  _catalog_tree.html  _command_row.html  _commands.html  _delegates.html  _delete_zone.html  _dwd.html  _error.html  _event_delete.html  _event_results.html  _export_result.html  _groups.html  _offboard_autoreply.html  _offboard_preview.html  _offboard_run.html  _onboard_preview.html  _onboard_roles.html  _onboard_run.html  _onboard_welcome.html  _org_form.html  _picker_options.html  _read_output.html  _sequence.html  (+29 more)
scripts/: acceptance.py  build_app.sh  build_command_catalog.py  fetch_gam.sh  gam_checksums.txt  vendor_assets.sh
tests/: conftest.py  test_abapit_connector.py  test_app_window.py  test_audit.py  test_audit_web.py  test_biometrics.py  test_builder.py  test_calendar_cache.py  test_calendar_index.py  test_catalog.py  test_command_contract.py  test_commands.py  test_ephemeral.py  test_errors.py  test_gam_connector.py  test_guard.py  test_lifecycle.py  test_models.py  test_offboard_safety.py  test_onboarding.py  test_parser.py  test_paths.py  test_polish.py  test_reports.py  test_runner.py  test_scale.py  test_setup.py  test_setup_web.py  test_sig_templates.py  test_signatures.py  test_users_web.py  test_vault.py  test_web.py
tests/fixtures/: all_calendars.csv  all_calendars.json  calendar_acls.json  calendar_acls_orphan.json  datatransfers_pending.csv  delegates.json  events.json  group_members.json  info_user.json  info_user_suspended.json  mock_gam.sh  print_users.json  resources.json  user_calendars.json
