[project]
name = "gamgui"
version = "0.0.1"
description = "A local, open-source macOS GUI for managing Google Workspace via GAM7 (connector-ready)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GamGUI contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "keyring>=24",
]

[project.optional-dependencies]
# The native window shell. Kept optional so the core + web can be developed/tested
# without the GUI toolkit installed (e.g. in CI / headless).
desktop = ["pywebview>=5.1"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
gamgui = "gamgui.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamgui"]
