[project]
name = "gamgui"
version = "0.0.1"
description = "A local, open-source macOS GUI for managing Google Workspace via GAM7 (connector-ready)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GamGUI contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "keyring>=24",
]

[project.optional-dependencies]
# The native window shell. Kept optional so the core + web can be developed/tested
# without the GUI toolkit installed (e.g. in CI / headless).
desktop = [
    "pywebview>=5.1",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov>=5",
    "httpx>=0.27",
]

[project.scripts]
gamgui = "gamgui.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
# A hung test (e.g. an asyncio subprocess deadlock seen intermittently on CI) fails with a
# traceback after 60s instead of hanging the whole job.
timeout = 60
filterwarnings = [
    # Python 3.9 GCs a finished asyncio subprocess transport after the TestClient loop closes
    # (background signature-apply jobs) -> "Exception ignored in ... RuntimeError: Event loop is closed".
    # Harmless teardown artifact; the real app's event loop is long-lived.
    "ignore:Exception ignored in:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["gamgui"]
# Repo-root-relative paths in coverage.xml so the Dockerized Sonar scanner (which mounts the repo
# at /usr/src) can map `gamgui/...` files. Absolute paths would point outside the container.
relative_files = true
omit = [
    "gamgui/app.py",          # pywebview/window bootstrap — exercised by launching the app, not unit tests
    "gamgui/__main__.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamgui"]
